# addon-modular-tree

./: .gitmodules  README.md  __init__.py  blender_manifest.toml  build_mtree.bat  build_mtree.sh
.github/scripts/: copy_native_module.py  setup_addon.py
.github/workflows/: CD.yml
core/: __init__.py  logger.py  operators.py  ui.py
core/m_tree/: CMakeLists.txt  install.py
core/m_tree/binaries/: m_tree_tests
core/m_tree/python_bindings/: CMakeLists.txt
core/nodes/: __init__.py
core/nodes/sockets/: int_socket.py  property_socket.py
core/nodes/tree_function_nodes/: __init__.py  branch_node.py  tree_mesher_node.py  trunk_node.py
core/resources/: resource_utils.py
m_tree/source/: CMakeLists.txt
m_tree/tests/: CMakeLists.txt
python_classes/: __init__.py  operators.py
python_classes/nodes/properties/: __init__.py
python_classes/nodes/sockets/: float_socket.py
python_classes/nodes/tree_function_nodes/: tree_mesher_node.py
scripts/: smoke_blender_addon.py  smoke_e2e_tree_build.py  smoke_install_addon.py
